# Picture_Frame

./: README.md
scripts/: Makefile
source/: .gitignore
source/app/: main.c
source/app/blinky/: blinky.c  blinky.h
source/app/lcd/: lcd.c  lcd.h
source/app/utilities/: rti_user.c
source/blinky/scripts/: Makefile
source/blinky/source/: gio.c  sys_main.c
source/halcogen/: picture_frame.dil
source/halcogen/include/: i2c.h  sys_vim.h
source/halcogen/source/: .gitignore  i2c.c  pinmux.c  sys_vim.c
source/prototype/blinky/: CMakeLists.txt  blink.c
source/prototype/scripts/: image_converter.sh
source/prototype/source/: .gitignore  CMakeLists.txt  christmas_time_2023.h  diskio.c  diskio.h  ice_cream_seawall.h  ice_cream_seawall.heic  lcd.c  lcd.h  lunch_victoria.h  lunch_victoria.heic  out.h  picture_frame.c  victoria.h  walk_on_seawall.h
source/prototype/source/scripts/: attach.ps1  flash.sh
source/test/pic32/: Blinky.elf  Blinky.hex  Blinky.map  Blinky.mk
source/test/ti_launchpad/: .gitignore  Makefile  halcogen_example.out
source/test/ti_launchpad/halcogen/: picture_frame.dil  picture_frame.hcg
source/test/ti_launchpad/halcogen/include/: gio.h
source/test/ti_launchpad/halcogen/source/: gio.c  sys_main.c
test/blinky/scripts/: Makefile
test/blinky/source/halcogen/: picture_frame.dil  picture_frame.hcg
test/test/pic32/: Blinky.c  NUL  pro32
test/test/ti_launchpad/: Makefile  Makefileold  TMS570LS122xFlashLnk.cmd  sys_link.cmd
